--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.7.0
+asyncpg==0.30.0
 bcrypt==4.2.1
 click==8.1.7
 databases==0.9.0
@@ -14,10 +15,12 @@ Mako==1.3.8
 MarkupSafe==3.0.2
 packaging==24.2
 passlib==1.7.4
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pydantic==2.10.3
 pydantic_core==2.27.1
 PyJWT==2.10.1
+python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.19
 rsa==4.9
