--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
+aiosmtplib==3.0.2
 alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.7.0
 asyncpg==0.30.0
 bcrypt==4.2.1
+blinker==1.9.0
 click==8.1.7
 databases==0.9.0
+dnspython==2.7.0
 ecdsa==0.19.0
+email_validator==2.2.0
 fastapi==0.115.6
+fastapi-mail==1.4.2
 gunicorn==23.0.0
 h11==0.14.0
 idna==3.10
+Jinja2==3.1.5
 jose==1.0.0
 Mako==1.3.8
 MarkupSafe==3.0.2
@@ -18,6 +24,7 @@ passlib==1.7.4
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pydantic==2.10.3
+pydantic-settings==2.7.0
 pydantic_core==2.27.1
 PyJWT==2.10.1
 python-dotenv==1.0.1
