--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,5 @@
 #DATABASE = "postgresql://rohit:TZ!A4X@62.72.12.225:5432/bottle_crush"
-DATABASE = "mysql+pymysql://super_admin_mindcodes:8*p5G!41@62.72.12.225/bottle_crush"
+DATABASE = "mysql+pymysql://super_admin_mindcodes:8*p5G!41@62.72.12.225/bottle_crusher"
 MAIL_USERNAME="demo7595vms"
 MAIL_PASSWORD="jvxholppdtlunlai"
 MAIL_FROM="support@bottlecrush.com"
