--- a/.gitignore
+++ b/.gitignore
@@ -232,6 +232,13 @@ _pkginfo.txt
 # but keep track of directories ending in .cache
 !?*.[Cc]ache/
 
+# Python bytecode cache files
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+
 # Others
 ClientBin/
 ~$*
@@ -475,6 +482,3 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
-
-
-__pycache__/
